--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.5"
+futures = "0.3.30"
 rstest = "0.19.0"
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
+tokio-util = { version = "0.7.10", features = ["io"] }
 
 [dev-dependencies]
 axum-test = "14.8.0"
